force-app/main/default/objects/Compliance_Check__c/Compliance_Check__c.object-meta.xml
<CustomObject>
    <label>Compliance Check</label>
    <nameField>
        <displayFormat>CMP-{00000}</displayFormat>
        <label>Compliance Check Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Compliance Checks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>