force-app/main/default/objects/Compliance_Check__c/fields/Action_Required__c.field-meta.xml
<CustomField>
    <fullName>Action_Required__c</fullName>
    <label>Action Required</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>