force-app/main/default/objects/Compliance_Check__c/fields/Checked_At__c.field-meta.xml
<CustomField>
    <fullName>Checked_At__c</fullName>
    <label>Checked At</label>
    <type>DateTime</type>
</CustomField>