force-app/main/default/objects/Compliance_Check__c/fields/Resolved_By__c.field-meta.xml
<CustomField>
    <fullName>Resolved_By__c</fullName>
    <label>Resolved By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Compliance Checks Resolved</relationshipLabel>
    <relationshipName>Compliance_Checks_Resolved</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <type>Lookup</type>
</CustomField>