force-app/main/default/objects/Compliance_Check__c/fields/Rule_Category__c.field-meta.xml
<CustomField>
    <fullName>Rule_Category__c</fullName>
    <label>Rule Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
        <value>
            <fullName>KYC</fullName>
        </value>
        <value>
            <fullName>RBI Digital Lending</fullName>
        </value>
        <value>
            <fullName>AML</fullName>
        </value>
        <value>
            <fullName>Internal Policy</fullName>
        </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>