force-app/main/default/objects/Compliance_Check__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
        <value>
            <fullName>Compliant</fullName>
        </value>
        <value>
            <fullName>Non-Compliant</fullName>
        </value>
        <value>
            <fullName>Warning</fullName>
        </value>
        <value>
            <fullName>N/A</fullName>
        </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>